--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,21 @@
 user-select: none;
 
 }
-
+.card{
+  height: auto;
+  width: auto;
+}
+#botonEliminar{
+  width: 25px;
+  height: 25px;
+  padding: 0px;
+  margin: 0px;
+  text-align: center;
+  line-height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 #MensajeNoHayNada{
   width: 100%;
   height: 180px;
@@ -119,7 +133,9 @@ display: flex;
 justify-content: space-between;
 align-items: center;
 text-align: center;
-
+white-space:nowrap;
+  text-overflow: ellipsis;
+  width: 200px;
 }
 th.titulocolumnas{
 
